--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
     <title>Templete</title>
     <link rel="icon" type="image/png" href="http://www.google.com/s2/favicons?domain=javascript.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 </head>
-<body>
-
+<body> 
+    <div class="flexbox">
+        <div>
+    <div class="" style="color:rgb(92, 91, 91);font-size: 1.5rem; font-family: 'Roboto', sans-serif;"><h1>YOUNG OBAMA</h1></div>
+    <div class="" style="color:rgb(8, 8, 8);font-size: 1.5rem; font-family: 'Roboto', sans-serif;"><h4>Superstar Web Developer</h4></div>
+    <div><ul>
+        <li>young.obama@gmail.com</li>
+        <li>989 121 8989</li>
+        <li>Brown House, New York, United State</li>
+    </ul>
+    </div>
+    </div>
+    <div class="">
+        <img src="img1.jpg" alt="">
+    </div>
+</div>
 </body>
 </html>
