--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body> 
     <div class="flexbox">
         <div>
-    <div class="" style="color:rgb(92, 91, 91);font-size: 1.5rem; font-family: 'Roboto', sans-serif;"><h1>YOUNG OBAMA</h1></div>
-    <div class="" style="color:rgb(8, 8, 8);font-size: 1.5rem; font-family: 'Roboto', sans-serif;"><h4>Superstar Web Developer</h4></div>
+    <div class="" style="color:rgb(92, 91, 91);font-size: 2.5rem; font-family: 'Roboto', sans-serif;"><h1>YOUNG OBAMA</h1></div>
+    <div class="" style="color:rgb(8, 8, 8);font-size: 2.5rem; font-family: 'Roboto', sans-serif;"><h4>Superstar Web Developer</h4></div>
     <div><ul>
         <li>young.obama@gmail.com</li>
         <li>989 121 8989</li>
@@ -23,9 +23,12 @@
     </ul>
     </div>
     </div>
-    <div class="">
-        <img src="img1.jpg" alt="">
+    <div >
+        <img class="image" src="img1.jpg" alt="">
     </div>
 </div>
+
+
+
 </body>
 </html>
