--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body> 
     <div class="flexbox">
         <div>
-    <div class="" style="color:rgb(92, 91, 91);font-size: 2.5rem; font-family: 'Roboto', sans-serif;"><h1>YOUNG OBAMA</h1></div>
-    <div class="" style="color:rgb(8, 8, 8);font-size: 2.5rem; font-family: 'Roboto', sans-serif;"><h4>Superstar Web Developer</h4></div>
+    <div class="cfont" style="color:rgb(92, 91, 91);"><h1>YOUNG OBAMA</h1></div>
+    <div class="ch4" style="color:rgb(8, 8, 8);"><h4><b>Superstar Web Developer</b></h4></div>
     <div><ul>
         <li>young.obama@gmail.com</li>
         <li>989 121 8989</li>
@@ -27,8 +27,40 @@
         <img class="image" src="img1.jpg" alt="">
     </div>
 </div>
-
-
-
+<div class="flexbox">
+<div >
+    <img style="padding:0 0 0 40%" src="img2.jpg" alt="">
+</div>
+<div style="padding:0 0 0 15%;width: 60%;">
+    <h4 class="ch4">
+        About Me
+    </h4>
+    <p class="ctfont" style="width: 90%">
+      Hello, This is Young Obama. I have rich experience in web site design & building and customization.
+      Also I am good at. I have rich experience in web site design & building and customization.
+      <br><br>Web-developer based on Paris.I have rich experience in web site design & building and customization.
+      Also I am good at.
+    </p>
+    </p>
+</div>
+</div>
+<div class="cfont" style="color:rgb(8, 8, 8);"><h4><b>What I do</b></h4></div>
+<div>
+    <div class="card">
+        <a href=""></a>
+        <h4 class="ch4">UI Design</h4>
+        <p></p>
+    </div>
+    <div class="card">
+        <a href=""></a>
+        <h4 class="ch4">Web Development</h4>
+        <p></p>
+    </div>
+    <div class="card">
+        <a href=""></a>
+        <h4 class="ch4">App Development</h4>
+        <p></p>
+    </div>
+</div>
 </body>
 </html>
