--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 </head>
 <body> 
+
+                                                                                                     <!-- Young obma -->
     <div class="flexbox">
         <div>
     <div class="cfont" style="color:rgb(92, 91, 91);"><h1>YOUNG OBAMA</h1></div>
@@ -27,6 +29,9 @@
         <img class="image" src="img1.jpg" alt="">
     </div>
 </div>
+
+                                                                                                     <!-- About me -->
+
 <div class="flexbox">
 <div >
     <img style="padding:0 0 0 40%" src="img2.jpg" alt="">
@@ -35,7 +40,7 @@
     <h4 class="ch4">
         About Me
     </h4>
-    <p class="ctfont" style="width: 90%">
+    <p class="pfont" style="width: 90%">
       Hello, This is Young Obama. I have rich experience in web site design & building and customization.
       Also I am good at. I have rich experience in web site design & building and customization.
       <br><br>Web-developer based on Paris.I have rich experience in web site design & building and customization.
@@ -44,22 +49,28 @@
     </p>
 </div>
 </div>
+
+
+                                                                                                     <!-- What I do -->
 <div class="cfont" style="color:rgb(8, 8, 8);"><h4><b>What I do</b></h4></div>
-<div>
+<div class="flexbox">
     <div class="card">
         <a href=""></a>
+        <img src="ui.jpg" alt="">
         <h4 class="ch4">UI Design</h4>
-        <p></p>
+        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt earum minima quam perspiciatis ducimus asperiores dolores saepe provident doloribus.</p>
     </div>
     <div class="card">
         <a href=""></a>
+        <img src="web.jpg" alt="">
         <h4 class="ch4">Web Development</h4>
-        <p></p>
+        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae consectetur reiciendis similique magni nesciunt. Aliquid, rerum quo doloribus dolores odio laborum, fugit quis quas magni aspernatur maxime dolorem nisi.</p>
     </div>
     <div class="card">
         <a href=""></a>
+        <img src="app.jpg" alt="">
         <h4 class="ch4">App Development</h4>
-        <p></p>
+        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi a aperiam maiores illum veniam ipsam reiciendis facilis laudantium repellat cumque quis sit, velit ipsum molestiae atque doloremque distinctio accusantium dignissimos.</p>
     </div>
 </div>
 </body>
