--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                                                                                                      <!-- Young obma -->
     <div class="flexbox">
         <div>
-    <div class="cfont" style="color:rgb(92, 91, 91);"><h1>YOUNG OBAMA</h1></div>
+    <div class="cfont" style="color:rgb(126, 125, 125);"><h1>YOUNG OBAMA</h1></div>
     <div class="ch4" style="color:rgb(8, 8, 8);"><h4><b>Superstar Web Developer</b></h4></div>
     <div><ul>
         <li>young.obama@gmail.com</li>
@@ -52,26 +52,30 @@
 
 
                                                                                                      <!-- What I do -->
-<div class="cfont" style="color:rgb(8, 8, 8);"><h4><b>What I do</b></h4></div>
+<div  style="color:rgb(8, 8, 8);"><h4 class="cfont ch4"><b>What I do</b></h4></div>
 <div class="flexbox">
     <div class="card">
         <a href=""></a>
-        <img src="ui.jpg" alt="">
+        <img  class="cardimage" src="ui.jpg" alt="">
         <h4 class="ch4">UI Design</h4>
-        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt earum minima quam perspiciatis ducimus asperiores dolores saepe provident doloribus.</p>
+        <p class="pfontnormal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt. </p>
     </div>
     <div class="card">
         <a href=""></a>
         <img src="web.jpg" alt="">
         <h4 class="ch4">Web Development</h4>
-        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae consectetur reiciendis similique magni nesciunt. Aliquid, rerum quo doloribus dolores odio laborum, fugit quis quas magni aspernatur maxime dolorem nisi.</p>
+        <p class="pfontnormal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt.  </p>
     </div>
     <div class="card">
         <a href=""></a>
         <img src="app.jpg" alt="">
         <h4 class="ch4">App Development</h4>
-        <p class="pfont">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi a aperiam maiores illum veniam ipsam reiciendis facilis laudantium repellat cumque quis sit, velit ipsum molestiae atque doloremque distinctio accusantium dignissimos.</p>
+        <p class="pfontnormal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt.  </p>
     </div>
+</div>
+<div>
+    <br><br><br><br><br><br><br><br>
+    <p class="pfontnormal">All right reserved Young Obama @2020</p>
 </div>
 </body>
 </html>
