--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
                                                                                                      <!-- About me -->
-
+<br><br><br><br><br><br><br><br>
 <div class="flexbox">
 <div >
     <img style="padding:0 0 0 40%" src="img2.jpg" alt="">
@@ -52,6 +52,7 @@
 
 
                                                                                                      <!-- What I do -->
+<br><br><br><br><br><br><br><br>
 <div  style="color:rgb(8, 8, 8);"><h4 class="cfont ch4"><b>What I do</b></h4></div>
 <div class="flexbox">
     <div class="card">
@@ -62,13 +63,13 @@
     </div>
     <div class="card">
         <a href=""></a>
-        <img src="web.jpg" alt="">
+        <img class="cardimage"  src="web.jpg" alt="">
         <h4 class="ch4">Web Development</h4>
         <p class="pfontnormal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt.  </p>
     </div>
     <div class="card">
         <a href=""></a>
-        <img src="app.jpg" alt="">
+        <img class="cardimage"  src="app.jpg" alt="">
         <h4 class="ch4">App Development</h4>
         <p class="pfontnormal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente repellat a maxime vitae officia beatae, corporis reiciendis libero facilis nesciunt.  </p>
     </div>
